# conkernelclient

./: CHANGELOG.md  README.md  core.html  core.html.md  index.html  index.html.md  ops.html  ops.html.md  pyproject.toml  robots.txt  search.json  sitemap.xml
conkernelclient/: __init__.py  _modidx.py  core.py  ops.py
nbs/: 00_core.ipynb  01_ops.ipynb  index.ipynb  nbdev.yml
tests/: zmq_regression.py
