[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "conkernelclient"
dynamic = ["version"]
description = "Concurrent-safe Jupyter KernelClient"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Jeremy Howard", email = "github@jhoward.fastmail.fm"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  'jupyter_client'
]

[project.optional-dependencies]
dev = [
  "fastcore",
  "ipykernel",
]

[project.urls]
Repository = "https://github.com/AnswerDotAI/conkernelclient"
Documentation = "https://AnswerDotAI.github.io/conkernelclient/"

[project.entry-points.nbdev]
conkernelclient = "conkernelclient._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "conkernelclient.__version__"}

[tool.setuptools.packages.find]
include = ["conkernelclient"]

[tool.nbdev]
